fixing the spacing with Anna

--- a/css/index.css
+++ b/css/index.css
@@ -607,12 +607,13 @@ html, body {
 			justify-content: center;
 			align-items: center;
 			padding: 2rem;
+      width: 100%;
 		}
 
 		.grid-item-image {
 			flex: 1; /* takes up 2/5 of the available space */
 			width: 400px;
-			height: 200px;
+			/* height: 200px; */
       	margin: 0.1rem;
 			display: flex;
 			justify-content: center;
@@ -622,17 +623,17 @@ html, body {
 		.grid-item-text {
 			flex: 3; /* takes up 1/5 of the available space */
 			width: 200px;
-			height: 200px;
+			/* height: 200px; */
       	margin: 0.1rem;
 			display: flex;
-      padding: 0rem 5rem;
+      /* padding: 0rem 5rem; */
 		}
 
 		.grid-item-map {
 			flex: 1; /* takes up 2/5 of the available space */
 			width: 400px;
-			height: 200px;
-      margin: 4rem 0.1rem;
+			/* height: 200px; */
+      margin: 0rem 0.1rem;
 			display: flex;
       justify-content: center;
       align-items: center;
@@ -650,12 +651,15 @@ html, body {
 			
 			.grid-item-image {
 				margin-bottom: 2rem;
+        width: 100%;
 			}
       	.grid-item-text {
 				margin-bottom: 2rem;
+        width: 100%;
 			}
       	.grid-item-map {
 				margin-bottom: 2rem;
+        width: 100%;
 			}
 		}
     /*           */
@@ -1404,7 +1408,6 @@ padding: 0rem 10rem;
 
 @media screen and (max-width: 768px) {
   .Definecontainer {
-    flex-direction: column;
     align-items: center;
   }
 }
@@ -1418,11 +1421,13 @@ padding: 0rem 10rem;
   display: flex;
   flex-wrap: wrap;
   width: 100%;
+  align-items: center;
+    justify-content: center;
 }
 
 .pageHeader {
   flex-basis: 60%;
-  height: 500px;
+  /* height: 500px; */
   box-sizing: border-box;
   /* padding: 20px; */
   /* border: 1px solid black; */
@@ -1435,7 +1440,7 @@ padding: 0rem 10rem;
 
 .pageMap {
   flex-basis: 40%;
-  height: 500px;
+  /* height: 500px; */
   box-sizing: border-box;
   padding: 20px;
   /* border: 1px solid black; */
@@ -1443,10 +1448,23 @@ padding: 0rem 10rem;
   /* background-color: lightgreen; */
 }
 
-@media only screen and (max-width: 768px) {
-  .pageHeader,
-  .pageMap {
+@media only screen and (max-width:1236px){
+  .pageHeader {
     flex-basis: 100%;
+  }
+  .pageMap{
+    flex-basis:100%
+  }
+  .descripBox:not(:last-child)::after{
+    background-color:white !important;
+  }
+}
+@media only screen and (max-width: 768px) {
+  .pageHeader{
+    flex-basis: 100%;
+  }
+  .pageMap {
+    flex-basis: 33%;
   }
   /* .mapScale{
     width: 40% !important;
